<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- при изменении пунктов меню, изменить в ItemsFragment строку, добавить соответствующий индекс: miFilter = menu.getItem(2); -->
    <item
        android:id="@+id/menu_add_note"
        android:icon="@drawable/ic_baseline_add_64"
        android:orderInCategory="1"
        android:title="@string/menu_item_add_note"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_baseline_filter_list_64_white"
        android:orderInCategory="2"
        android:title="@string/menu_item_filter"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_baseline_sort_by_alpha_64"
        android:orderInCategory="3"
        android:title="@string/menu_item_sort"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_git"
        android:icon="@drawable/github_64"
        android:orderInCategory="4"
        android:title="@string/menu_item_github"
        app:showAsAction="always"
        />

</menu>